Remove default files & migrate the overview inside the storybook folder

--- a/test/storybook/docs/Overview.mdx
+++ b/test/storybook/docs/Overview.mdx
@@ -93,17 +93,20 @@ With StencilJS, you get JSX, reactive state, automatic updates, style encapsulat
 Stencil leverages Web Components, a set of browser APIs for creating reusable, encapsulated UI elements. By compiling Stencil code to Web Components, the team ensures maximum compatibility and longevity.
 
 ## Learn More
-Explore the rest of the documentation for details on Stencil's architecture, APIs, and usage:
+For deeper details on Stencil's architecture, CLI, compiler, runtime, and more, explore the additional documentation files located in the `docs` folder of this repository (`~/docs`).
 
-- [README.md](./README.md)
-- [cli.md](./cli.md)
-- [compiler.md](./compiler.md)
-- [declarations.md](./declarations.md)
-- [dev-server.md](./dev-server.md)
-- [hydrate.md](./hydrate.md)
-- [mock-doc.md](./mock-doc.md)
-- [runtime.md](./runtime.md)
-- [scripts.md](./scripts.md)
+These Markdown files cover:
+- Project setup and usage
+- CLI commands and architecture
+- Compiler internals
+- Declarations and types
+- Dev server features
+- Hydration and SSR
+- Mocking and testing utilities
+- Runtime behavior
+- Build scripts and automation
+
+Open the relevant `.md` files in the `docs` directory to read further about each topic.
 
 ---
 StencilJS empowers teams to build reusable, future-proof UI components for any frontend stack. By embracing web standards, it helps developers avoid framework churn and focus on delivering great user experiences.
