--- a/test/storybook/docs/Testing/Overview.mdx
+++ b/test/storybook/docs/Testing/Overview.mdx
@@ -8,7 +8,7 @@ Stencil uses two main categories of tests to ensure code quality and reliability
 
 For more details on each category, refer to:
 - [Core Testing Documentation](./Core.mdx)
-- [Integration & E2E Testing Documentation](./integration-e2e.mdx)
+- [Integration & E2E Testing Documentation](./Integration-e2e.mdx)
 
 ---
 
