--- a/test/storybook/docs/Testing/Integration-e2e.mdx
+++ b/test/storybook/docs/Testing/Integration-e2e.mdx
@@ -4,17 +4,35 @@ This document covers all **integration and end-to-end (E2E)** tests for Stencil,
 
 ## Test Groupings & Purpose
 
-### 1. Sample Apps & Demos
-- Example Stencil apps and usage demos.
-  - `hello-world`, `hello-vdom`, `todo-app`, `ionic-app`, `storybook`
+### 1. Integration & E2E Test Suites
+
+**Integration Tests (wdio):**
+- Use WebdriverIO for browser automation.
+- More granular, focusing on specific features, component interactions, and runtime behavior in the browser.
+- Examples: event emission, slot rendering, shadow DOM, UI updates.
+- Located in the `wdio` folder.
+
+**End-to-End Tests (end-to-end):**
+- Use Stencil's E2E utilities and Puppeteer.
+- Validate the full build output, hydration, and integration of components in real app scenarios.
+- Simulate real-world usage and app-level correctness after a build.
+- Located in the `end-to-end` folder.
+
+**Example: Integration vs End-to-End**
+
+There may be some overlap between integration and end-to-end tests, but end-to-end suites typically perform a deeper dive into feature coverage and scenarios. For instance, both test Stencil's event system:
+- The integration test (`wdio/event-basic/cmp.test.tsx`) checks that an event is emitted and a counter is incremented in the UI using browser automation.
+- The end-to-end test (`end-to-end/src/event-cmp/event-cmp.e2e.ts`) is more comprehensive, covering multiple event scenarios, options, propagation, and payloads using Stencil's E2E utilities.
+
+This overlap is intentional: it ensures events work both at the build/integration level and at runtime in the browser, with E2E tests providing deeper validation.
 
 ### 2. Feature/Functionality-Specific Tests
 - Tests focused on specific Stencil features or outputs.
   - `docs-json`, `docs-readme`, `copy-task`, `style-modes`, `browser-compile`, `bundler`, `performance`, `prerender-shadow`, `type-tests`
 
-### 3. Integration & E2E Test Suites
-- Automated E2E and integration test suites.
-  - `end-to-end`, `wdio`
+### 3. Sample Apps & Demos
+- Example Stencil apps and usage demos.
+  - `hello-world`, `hello-vdom`, `todo-app`, `ionic-app`, `storybook`
 
 ### 4. Infrastructure & Utilities
 - Test/build support scripts and runners.
