Tweak the coverage matrix

--- a/test/storybook/docs/Testing/Decorators/@Component.mdx
+++ b/test/storybook/docs/Testing/Decorators/@Component.mdx
@@ -4,243 +4,273 @@ The `@Component` decorator is used to define a Stencil custom element, specifyin
 
 ## Component Decorator Permutation Matrix
 
-<table>
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>shadow</th>
-      <th>scoped</th>
-      <th>assetsDirs</th>
-      <th>formAssociated</th>
-      <th>styleUrl</th>
-      <th>styleUrls</th>
-      <th>styles</th>
-      <th>Number of Test Files</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>98</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>22</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>42</td>
-    </tr>
-    <tr>
-      <td>6</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>7</td>
-      <td>✗</td>
-      <td>✗</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>8</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>12</td>
-    </tr>
-    <tr>
-      <td>10</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>29</td>
-    </tr>
-    <tr>
-      <td>11</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>17</td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>13</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>9</td>
-    </tr>
-    <tr>
-      <td>14</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>15</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>16</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>17</td>
-      <td>✗</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>18</td>
-      <td>✗</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>19</td>
-      <td>✗</td>
-      <td>✓</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>6</td>
-    </tr>
-    <tr>
-      <td>20</td>
-      <td>✗</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-      <td>4</td>
-    </tr>
-  </tbody>
-</table>
+
+
+<div><strong>Permutation Coverage:</strong> 20/432 permutations covered (<strong>4.6%</strong>)</div>
+<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+  <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
+    <colgroup>
+      <col style={{ width: '4%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '10%' }} />
+      <col style={{ width: '16%' }} />
+    </colgroup>
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>shadow</th>
+        <th>scoped</th>
+        <th>assetsDirs</th>
+        <th>formAssociated</th>
+        <th>styleUrl</th>
+        <th>styleUrls</th>
+        <th>styles</th>
+        <th>Number of Test Files</th>
+      </tr>
+    </thead>
+  </table>
+  <div style={{ maxHeight: 400, overflowY: 'auto', width: '100%' }}>
+    <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
+      <colgroup>
+        <col style={{ width: '4%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '10%' }} />
+        <col style={{ width: '16%' }} />
+      </colgroup>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>98</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>42</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>✗</td>
+          <td>✗</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>29</td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>13</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>9</td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>15</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>16</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>17</td>
+          <td>✗</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>18</td>
+          <td>✗</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>19</td>
+          <td>✗</td>
+          <td>✓</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>6</td>
+        </tr>
+        <tr>
+          <td>20</td>
+          <td>✗</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>4</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <p>
   <strong>✓</strong> = Option is set to <code>true</code> in the @Component decorator<br/>
@@ -249,6 +279,7 @@ The `@Component` decorator is used to define a Stencil custom element, specifyin
   For string/array options, <strong>✓</strong> means a value is set, <strong>-</strong> means unset.<br/>
   Each row is a unique scenario. The last column shows how many test files exercise that scenario.
 </p>
+
 
 ## Next Steps
 - Audit your integration and E2E tests for each @Component permutation.
