Clean up the Component mdx

--- a/test/storybook/docs/Testing/Decorators/@Component.mdx
+++ b/test/storybook/docs/Testing/Decorators/@Component.mdx
@@ -2,11 +2,7 @@
 
 The `@Component` decorator is used to define a Stencil custom element, specifying its tag name, style, encapsulation, shadow DOM options, and other metadata. It is the entry point for all Stencil components and controls how they are registered and rendered.
 
-## Component Decorator Permutation Matrix
-
-
-
-<div><strong>Permutation Coverage:</strong> 20/432 permutations covered (<strong>4.6%</strong>)</div>
+<div><strong>Coverage:</strong> 20/432 permutations covered (<strong>4.6%</strong>)</div>
 <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
   <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
     <colgroup>
@@ -280,7 +276,6 @@ The `@Component` decorator is used to define a Stencil custom element, specifyin
   Each row is a unique scenario. The last column shows how many test files exercise that scenario.
 </p>
 
-
-## Next Steps
-- Audit your integration and E2E tests for each @Component permutation.
-- Update the matrix with links and notes for missing permutations.
+<div style={{ background: '#ffeeba', border: '1px solid #f5c06f', borderRadius: 4, padding: '1em', marginTop: '2em', fontSize: '1.1em', textAlign: 'center' }}>
+  <strong>To update the matrix and coverage values, run <code>component-coverage.js</code> in this directory.</strong>
+</div>
