Update the overviews

--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -36,7 +36,7 @@ export class ExampleCmp {
 
 ## Decorators
 
-Below are all the decorators provided by Stencil, each with a description, usage example, and a link to its dedicated test coverage matrix:
+Below are all the decorators provided by Stencil. Each decorator has a dedicated page that includes a detailed test coverage matrix, along with a description and usage examples. Click the name of the decorator to view its testing matrix:
 
 - [`@Component`](?path=/docs/testing-decorators-component): Defines a custom element and its metadata, such as tag name, style, encapsulation, and shadow DOM options.
   ```tsx
