--- a/test/storybook/docs/Testing/Overview.mdx
+++ b/test/storybook/docs/Testing/Overview.mdx
@@ -6,9 +6,12 @@ Stencil uses two main categories of tests to ensure code quality and reliability
 
 - **Integration & E2E Testing:** Located under the `test` folder, these tests validate Stencil as a dependency, focusing on integration, end-to-end scenarios, and user-facing features. See `integration-e2e-testing.mdx` for a detailed breakdown.
 
+- **Decorator Test Coverage:** This section provides detailed test coverage matrices for Stencil's decorators, ensuring that all permutations of decorator options are tested.
+
 For more details on each category, refer to:
 - [Core Testing Documentation](./Core.mdx)
 - [Integration & E2E Testing Documentation](./Integration-e2e.mdx)
+- [Decorator Test Coverage](./Decorators/Overview.mdx)
 
 ---
 
