Added mutable as part of the test matrix for @Prop

--- a/test/storybook/docs/Testing/Decorators/@Prop.mdx
+++ b/test/storybook/docs/Testing/Decorators/@Prop.mdx
@@ -24,14 +24,16 @@ Below is a detailed explanation of each property available in the `@Prop` decora
 <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
   <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
     <colgroup>
-      <col style={{ width: '33%' }} />
-      <col style={{ width: '33%' }} />
-      <col style={{ width: '34%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
     </colgroup>
     <thead>
       <tr>
         <th>Type</th>
         <th>reflect</th>
+        <th>mutable</th>
         <th>Number of Occurrences</th>
       </tr>
     </thead>
@@ -39,9 +41,10 @@ Below is a detailed explanation of each property available in the `@Prop` decora
   <div style={{ maxHeight: 400, overflowY: 'auto', width: '100%' }}>
     <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
       <colgroup>
-        <col style={{ width: '33%' }} />
-        <col style={{ width: '33%' }} />
-        <col style={{ width: '34%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
       </colgroup>
       <tbody>
         {data.coveredPermutations.map((p, i) => (
@@ -62,14 +65,16 @@ Below is a detailed explanation of each property available in the `@Prop` decora
 <div style={{ marginTop: '2rem', maxWidth: '100%', width: '100%', background: '#fff' }}>
   <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
     <colgroup>
-      <col style={{ width: '33%' }} />
-      <col style={{ width: '33%' }} />
-      <col style={{ width: '34%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
+      <col style={{ width: '25%' }} />
     </colgroup>
     <thead>
       <tr>
         <th>Type</th>
         <th>reflect</th>
+        <th>mutable</th>
         <th>Status</th>
       </tr>
     </thead>
@@ -77,9 +82,10 @@ Below is a detailed explanation of each property available in the `@Prop` decora
   <div style={{ maxHeight: 600, overflowY: 'auto', width: '100%' }}>
     <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
       <colgroup>
-        <col style={{ width: '33%' }} />
-        <col style={{ width: '33%' }} />
-        <col style={{ width: '34%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
+        <col style={{ width: '25%' }} />
       </colgroup>
       <tbody>
         {data.missingPermutations.map((p, i) => (
